# cmse822-roybrynn

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile
.github/workflows/: create-issues.yml  update_repos.yml
agoge/: CMakeLists.txt  Makefile  README.md  agoge_final.h5  agoge_run  design.md  instructions.md  refactor.md
agoge/include/agoge/: BoundaryManager.hpp  Config.hpp  Domain.hpp  EulerSolver.hpp  Field.hpp  Field3d.hpp  GravitySolver.hpp  HDF5_IO.hpp  ParameterSystem.hpp  PerformanceMonitor.hpp  PoissonSolver.hpp  YamlParser.hpp
agoge/problems/: CmakeLists.txt  GaussianPulse.cpp  GaussianPulse.hpp  GaussianPulse.yaml  GravityCollapse.cpp  GravityCollapse.hpp  GravityCollapse.yaml  Problem.hpp  ProblemRegistry.cpp  ProblemRegistry.hpp  Sedov.cpp  Sedov.hpp  Sedov.yaml  SodShockTube.cpp  SodShockTube.hpp  SodShockTube.yaml
agoge/src/: BoundaryManager.cpp  CMakeLists.txt  EulerSolver.cpp  Field3d.cpp  GravitySolver.cpp  HDF5_IO.cpp  ParameterSystem.cpp  PoissonSolver.cpp  YamlParser.cpp  agoge.cpp  main.cpp
agoge/tests/: Makefile  test_euler_solver.cpp  test_field3d_reorder.cpp
agoge/viz/: README.md  agoge_compare.py  agoge_viz.py  agoge_yt.py  example.ipynb  example2.ipynb  gaussian_compare.py  plot_performance.py  vds_builder.py
agoge/viz/.ipynb_checkpoints/: example2-checkpoint.ipynb
docs/: VTuneTutorial.md  codingStandards.md  compare_usage.md  learningGoals.md  syllabus.md
homework/: generate_prs.sh
homework/homework1/: README.md
homework/homework2/: README.md
homework/homework3/: README.md  answers.md
projects/project1/: ERT_tutorial.md  README.md  agoge_VTune.md  config.hpcc.msu.edu.01  config.hpcc.msu.edu.02  run_ert.slurm
projects/project2/: README.md  blocking.cpp  latencyHiding.cpp
projects/project3/: README.md
projects/project4/: README.md  a.out  jacobi_solver_parallel.cpp  mm_utils.hpp  tranpose_mpi_3D.cpp  transpose_mpi_2D.cpp  transpose_tutorial.cpp  transpose_tutorial_Z_direction.cpp  vecadd.cpp
projects/project5/: README.md  serial_pi.cpp
projects/project6/: README.md
solutions/: hw1_soln.md
utils/: extract_zone_updates.sh  generate_prs.sh  plot_performance.py  privateArchived.sh  scaling_study.slurm  strong_scaling.sh  verifyMPI.sh  weak_scaling.sh
